--- a/index.html
+++ b/index.html
@@ -35,6 +35,55 @@
             </div>
         </div>
     </div>
+    <div class="section">
+        <h1>My Plans</h1>
+        <div class="section-container">
+            <div class="section1">
+                <img src="images/icons/web.png">
+                <h2>Web Development</h2>
+                <p>I want to start</p>
+            </div>
+            <div class="section1">
+                <img src="images/icons/js.png">
+                <h2>Javascript</h2>
+                <p>I want to learn</p>
+            </div>
+            <div class="section1">
+                <img src="images/icons/smoke.png">
+                <h2>Smoking Habit</h2>
+                <p>I want to end</p>
+            </div>
+            <div class="section1">
+                <img src="images/icons/ecom.png">
+                <h2>ecommerce</h2>
+                <p>I want to develop</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="div-watch">
+        <h1>Awlays keep a positive mindset</h1>
+        <button class="btn">Call Now</button>
+    </div>
+
+    <div class="footer">
+        <div class="bottom">
+            <div class="bottom1">
+                <h1>Future</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p>Email : info@gmail.com</p>
+                <p>Phone : 01500 00 00 00</p>
+                <img src="images/icons/fb.png">
+                <img src="images/icons/youtube.png">
+                <img src="images/icons/twitter.png">
+            </div>
+            <div class="bottom2">
+                <h1>Subscribe</h1>
+                <input type="text" placeholder="Enter Your Email">
+               <button>Subscribe</button>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
